# easydbg-script

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: win64-build.yml  win86-build.yml
easydbg_script/: CMakeLists.txt
easydbg_script/includes/: easydbg_script.h
easydbg_script/pluginsdk/: x32bridge.lib  x32dbg.lib  x64bridge.lib  x64dbg.lib
easydbg_script/src/: easydbg_script.cpp
